feat: SessionRequest 新增 startTime 屬性 refactor: 業務邏輯移出 mapper，釐清責任邊界